test/spec_vectors/simd_bitwise/fail/module_22.wat
(module (func $v128.or-arg-empty (result v128) (v128.or)))